--- a/nd-godot/Cargo.toml
+++ b/nd-godot/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "example"
+name = "nd-godot"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,5 +7,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-clap = { workspace = true }
+godot = { version = "0.2.1", features = ["api-4-3"] }
 nd-engine = { workspace = true }
+serde_json = { workspace = true }
