Add thread pool

--- a/nd-client/Cargo.toml
+++ b/nd-client/Cargo.toml
@@ -10,4 +10,5 @@ fxhash = { workspace = true }
 glium = { workspace = true }
 log = { workspace = true }
 nd-engine = { workspace = true }
+rayon = "1.10.0"
 serde_json = { workspace = true }
