--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tempfile = "3.14.0"
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
 fxhash = "0.2.1"
+async-trait = "0.1.83"
