--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -3,9 +3,7 @@ name = "example"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
 clap = { workspace = true }
 nd-engine = { workspace = true }
+serde_json = { workspace = true }
